After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 676424 - Incomprehensible error message when trying to connect to idevice
Incomprehensible error message when trying to connect to idevice
Status: RESOLVED FIXED
Product: gvfs
Classification: Core
Component: afc backend and volume monitor
git master
Other Linux
: Normal critical
: ---
Assigned To: gvfs-maint
gvfs-maint
Depends on:
Blocks:
 
 
Reported: 2012-05-20 14:59 UTC by William Jon McCann
Modified: 2012-08-23 06:52 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
screenshot of error dialog (11.19 KB, image/png)
2012-05-20 14:59 UTC, William Jon McCann
  Details
bt (6.68 KB, text/plain)
2012-05-20 14:59 UTC, William Jon McCann
  Details
Improve idevice error handling (4.95 KB, patch)
2012-08-22 19:23 UTC, William Jon McCann
committed Details | Review
Unpair an idevice if it was already paired and refuses to connect (2.60 KB, patch)
2012-08-22 19:23 UTC, William Jon McCann
committed Details | Review

Description William Jon McCann 2012-05-20 14:59:30 UTC
Created attachment 214494 [details]
screenshot of error dialog

Using jhbuild. I clicked on my ipad in the sidebar. First time I get a lockdown error dialog. (that should be nicer). Next time I click the item in the sidebar, nautilus crashes.
Comment 1 William Jon McCann 2012-05-20 14:59:55 UTC
Created attachment 214495 [details]
bt
Comment 2 William Jon McCann 2012-05-20 15:26:28 UTC
Apparently this error was related to idevicepairing. I fixed it by doing idevicepair unpair. Perhaps we can a) show a better error message b) allow me to do that directly?
Comment 3 William Jon McCann 2012-07-16 16:18:11 UTC
Doesn't seem to crash any more so will repurpose this bug to address the incomprehensible error.
Comment 4 William Jon McCann 2012-07-16 17:18:21 UTC
Error code -5 is LOCKDOWN_E_SSL_ERROR

Trying to use ideviceinfo from the command line gives me:
GnuTLS error: A TLS packet with unexpected length was received.

The libimobiledevice web site says to:
12.10.2011: libimobiledevice git master works with iOS 5 just fine. You might have to run "idevicepair unpair && idevicepair pair" if you should have trouble connecting after an upgrade.
Comment 5 William Jon McCann 2012-08-22 19:23:03 UTC
Created attachment 222184 [details] [review]
Improve idevice error handling
Comment 6 William Jon McCann 2012-08-22 19:23:06 UTC
Created attachment 222185 [details] [review]
Unpair an idevice if it was already paired and refuses to connect
Comment 7 Alexander Larsson 2012-08-23 06:52:51 UTC
Attachment 222184 [details] pushed as 3fbe3f2 - Improve idevice error handling
Attachment 222185 [details] pushed as 91fcd2e - Unpair an idevice if it was already paired and refuses to connect