Improve idevice error handling

https://bugzilla.gnome.org/show_bug.cgi?id=676424